--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "home-library",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Project that can helps you manage your home library",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "DeafMist",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
+  }
 }
